# Real_Time_stocks_Data_Engineering

./: .env  Docker-compose.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  testing.py
Monitoring/grafana/provisioning/datasources/: prometheus_ds.yml
Monitoring/prometheus/: prometheus.yml
Monitoring/prometheus/rules/: alert_rules.yml
config/: airflow.cfg
dags/: batch_processing.py  streaming_with_kafka.py
jobs/: Dockerfile  Dockerfile.spark  spark_batching_jobs.py  spark_streaming_job.py  spark_streaming_jobs.py
